@@ -3,6 +3,9 @@
 
 <h2>Project Accounting</h2>
 #include $image_maps
+<h5>CPU hours per Project (Pie) (<a href="$base_url/xml/osg_project_hours$filter_url">Analyze</a>)</h5>
+<img src="$base_url/pie_graphs/osg_project_hours$filter_url" usemap="#map"></p>
+
 <h5>Monthly CPU hours per Project (<a href="$base_url/xml/monthly_project_cpu_hours$filter_url">Analyze</a>)</h5>
 <img src="$base_url/bar_graphs/monthly_project_cpu_hours$filter_url" usemap="#map"></p>
 
